# mitmproxy_rules

./: .gitignore  LICENSE  Makefile  README.md  api_server.py  interceptor.py  main.py  pyproject.toml  utils.py
addon/: README.md  interceptor.py
backend/: README.md  api_server.py  rules.example.yaml
frontend/: README.md  index.html  main.js
