[project]
name = "mitmproxy_rules"
version = "0.1.0"
description = "Centralize and organize custom mitmproxy rules for automating traffic manipulation, with a web interface and API for management."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "mitmproxy>=12.1.1",
    "pyyaml>=6.0.2",
]
